overlap fixes

--- a/test/style.css
+++ b/test/style.css
@@ -13,6 +13,18 @@
     width: 50px;
     height: 50px;
 }
+.box-wide {
+    position: absolute;
+    background-color: lime;
+    width: 100px;
+    height: 50px;
+}
+.box-tall {
+    position: absolute;
+    background-color: lime;
+    width: 50px;
+    height: 100px;
+}
 .box.focused {
     outline: 2px solid black;
 }
@@ -84,3 +96,7 @@
 .block43{top:200px; left:50px;}
 .block44{top:75px; left:150px;}
 .block45{top:50px; left:225px;}
+.block46{top:125px; left:210px;}
+.block47{top:200px; left:225px;}
+.block48{top:100px; left:335px;}
+.block49{top:125px; left:410px;}
